# metaflow-local-service

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: architecture.md  configuration.md
src/metaflow_local_service/: __init__.py  cli.py  daemon.py  server.py  store.py
tests/structural/: test_architecture.py
tests/unit/: test_daemon.py  test_server.py  test_store.py
